--- a/front/src/components/Posts/Posts.module.css
+++ b/front/src/components/Posts/Posts.module.css
@@ -1,1 +1,16 @@
-.Posts {}
+.Posts {
+
+}
+
+.postItem{
+    /* border: 1px solid black; */
+    padding: 25px;
+    padding-top: 10px;
+    margin: 10px 25%;
+    border-radius: 5px;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+.postItem:hover{
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
