--- a/front/src/index.css
+++ b/front/src/index.css
@@ -11,3 +11,53 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.Form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.Form input, textarea, button, ul {
+  border-radius: 5px;
+  border: none;
+  padding: 10px;
+  margin: 5px 0px;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+
+.Form input:hover, textarea:hover, button:hover, ul:hover{
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+
+button{
+  background-color: transparent;
+  color: black;
+  padding: 10px 20px;
+  border: 1px solid black;
+}
+
+nav{
+  margin-bottom: 25px;
+}
+
+nav ul {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  list-style-type: none;
+}
+
+nav ul li a{
+  text-decoration: none;
+  color: #707070;
+}
+
+nav ul li a:hover{
+  color: black;
+}
+
+nav ul li a:focus{
+  color: black;
+}
